Update publish.yml for PyPI trusted publishing
Added permissions for contents and id-token for trusted publishing.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,9 +5,12 @@ on:
     tags:
       - "v*.*.*"
 
+permissions:
+  contents: read
+  id-token: write  # REQUIRED FOR PyPI TRUSTED PUBLISHING
+
 jobs:
   build-and-publish:
-    name: Build and Publish to PyPI
     runs-on: ubuntu-latest
 
     steps:
